--- a/CSS.css
+++ b/CSS.css
@@ -69,20 +69,22 @@ nav{
     height: 75px;
     position:fixed;
     width: 100%;
-    padding-left: 450px
+    padding-left: 450px;
     
     
 }
+
 .navbar navbar-expand-lg navbar-dark{
     position:fixed;
 }
 .navlist{
     float: right;
-    padding-right: 900px;
+    margin-right: 900px;
 
         
     
 }
+
 .navlist li{
     display: inline-block;
     
@@ -107,4 +109,84 @@ nav{
     padding: 150px;
     background-size: cover;
     background-color: aqua;
+}
+.klassisch{
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+}
+footer{ 
+    background-color: darkred;
+    text-align: center;
+    text-decoration: none
+
+
+}
+.footerlist{
+    float:right;
+    background-color: darkred;
+    width: 100%;
+    height: 40px;
+    margin: auto;
+}
+
+.footerlist li {
+    padding: 10px;
+    display: inline-block;
+}
+
+.footerlist li a {
+    text-decoration: none;
+    color: #fff;
+}
+.navi{
+    border-bottom: 1px solid #EAEAEB;
+    text-align: right;
+    height: 70px;
+    line-height: 70px;
+}
+.menu {
+    margin: 0 30px 0 0;
+    
+}
+.menu a {
+    clear: right;
+    text-decoration: none;
+    color: gray;
+    margin: 0 10px;
+    line-height: 70px;
+}
+label{
+    margin: 0 40px 0 0;
+    font-size: 26px;
+    line-height: 70px;
+    display: none;
+    float: right;
+    width: 26px;
+}
+#toogle {
+    display: none
+}
+@media only sreen and (max-width:500px) {
+    label{
+        display:block;
+        cursor:pointer;
+    }
+    .menu{
+        text-align: center;
+        width:100%;
+        display:none;
+    }
+    .menu a{
+        display:blick;
+        border-bottom: 1px solid #EAEAEB;
+        margin: 0;
+    }
+    #toogle:checked + menu {
+        display:block;
+    }
+    
+    
+    
 }
