--- a/CSS.css
+++ b/CSS.css
@@ -140,6 +140,14 @@ footer{
     text-decoration: none;
     color: #fff;
 }
+html, body{
+    width: 100%;
+    height: 100%;
+    margin: 0;
+}
+html{
+    font-family: "helvetica neue", sans-serif;
+}
 .navi{
     border-bottom: 1px solid #EAEAEB;
     text-align: right;
